--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>davaleba8</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/responsive.css">
+	
 </head>
 <body>
 
