--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css">
+	<script src="https://kit.fontawesome.com/084011dc8f.js" crossorigin="anonymous"></script>
 	
 </head>
 <body>
@@ -22,6 +23,7 @@
 			<li class="nav-li"><a class="a" href="#"> TOUR PACKAGE</a></li>
 		</ul>
 	</nav>
+	<div class="bar"><i class="fab fa-500px"></i></i>
 </header>
 		<div class="section1-banner">
 			<div><h1>Discover Greece</h1></div>
